--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,6 @@
 .row {
   max-width: $grid-width;
-  background-color: #eee;
+  //background-color: #eee;
   margin: 0 auto;
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
@@ -8,8 +8,10 @@
 
   @include clearfix;
 
+  // attribute starts with col-
+
   [class^="col-"] {
-    background-color: orangered;
+    // background-color: orangered;
     float: left;
 
     &:not(:last-child) {
