--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,5 +23,10 @@
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
-  margin: -10rem;
+  margin-top: -10rem;
+}
+
+.section-stories {
+  padding: 15rem 0;
+  position: relative;
 }
