--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,6 +43,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
