--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,7 +7,7 @@
 .section-features {
   padding: 20rem 0;
   background-image: linear-gradient(
-      to right,
+      to right bottom,
       rgba($color-primary-light, 0.8),
       rgba($color-primary-dark, 0.8)
     ),
@@ -29,4 +29,31 @@
 .section-stories {
   padding: 15rem 0;
   position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba($color-primary-light, 0.8),
+    rgba($color-primary-dark, 0.8)
+  );
+}
+
+.book {
+  background-image: linear-gradient(
+      110deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 0.3rem;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+  height: 50rem;
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
