--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@ Dark green: #28b485
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
-
+@import "components/navigation";
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
