--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,8 @@ Dark green: #28b485
 @import "components/bg-video";
 @import "components/form";
 @import "components/navigation";
+@import "components/popup";
+
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
