--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,10 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 99999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s;
+
   &__content {
     @include absCenter;
     width: 75%;
@@ -14,6 +18,9 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 0.4s 0.2s;
   }
   &__left {
     width: 33.333333%;
@@ -46,5 +53,30 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  &__close {
+    &:link,
+    &:visited {
+      position: absolute;
+      right: 2.5rem;
+      top: 2.5rem;
+      font-size: 3rem;
+      color: $color-grey-dark;
+      text-decoration: none;
+      display: inline-block;
+      line-height: 1;
+    }
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
