--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,6 +49,9 @@ html {
 body {
   padding: 3rem;
   box-sizing: border-box;
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
 
 // Media Query NOTES:
