--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,9 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -15,6 +18,10 @@
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
   & > * {
     transform: skewY(7deg);
   }
@@ -24,11 +31,17 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -38,6 +51,9 @@
     rgba($color-primary-light, 0.8),
     rgba($color-primary-dark, 0.8)
   );
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
