--- a/css/style.css
+++ b/css/style.css
@@ -411,10 +411,38 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 500; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      background-color: #fff;
+      border-radius: 0.3rem;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0deg);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0deg); }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0;
+        transform: translate(0);
+        width: 100%;
+        padding: 7rem 4rem 4rem 4rem; }
+      .card__price-box {
+        margin-bottom: 3rem; }
+      .card__price-value {
+        font-size: 4rem; } }
 
 .story {
   width: 75%;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.6);
   padding: 6rem;
   padding-left: 9rem;
   margin: 0 auto;
@@ -422,6 +450,14 @@ body {
   border-radius: 0.3rem;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem;
+      padding-left: 7rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      transform: skewX(0deg); } }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -431,9 +467,10 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
-    background-color: orange;
-    position: relative;
-    overflow: hidden; }
+    position: relative; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        transform: translateX(-3rem) skewX(0deg); } }
   .story__caption {
     position: absolute;
     top: 50%;
@@ -459,6 +496,9 @@ body {
     filter: blur(3px) brightness(80%); }
   .story__text {
     transform: skewX(12deg); }
+    @media (max-width: 37.5em) {
+      .story__text {
+        transform: skewX(0deg); } }
 
 .bg-video {
   position: absolute;
@@ -488,6 +528,9 @@ body {
   width: 90%;
   display: block;
   transition: all 1s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -515,6 +558,11 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%; }
+      .form__radio-group:not(:last-child) {
+        margin-bottom: 2rem; } }
 
 .form__radio-label {
   font-size: 1.6rem;
@@ -706,19 +754,58 @@ body {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0);
     transition: all 0.4s 0.2s; }
+    @media (max-width: 75em) {
+      .popup__content {
+        padding: 3rem; } }
   .popup__left {
     width: 33.333333%;
     float: left;
-    display: table-cell; }
+    display: table-cell;
+    vertical-align: middle;
+    box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.2); }
+    @media (max-width: 75em) {
+      .popup__left {
+        float: none;
+        width: 100%;
+        display: block;
+        padding-left: 2rem;
+        box-shadow: none; } }
   .popup__right {
     width: 66.666667%;
     float: left;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 75em) {
+      .popup__right {
+        float: none;
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+        padding: 3rem 2rem; } }
+    @media (max-width: 56.25em) {
+      .popup__right .heading-secondary {
+        font-size: 2rem;
+        margin-top: 2rem; }
+      .popup__right .heading-tertiary {
+        font-size: 1.2rem; } }
   .popup__img {
     display: block;
-    width: 100%; }
+    width: 100%;
+    margin-top: 1px; }
+    @media (max-width: 75em) {
+      .popup__img {
+        width: 40%;
+        display: inline-block;
+        margin-right: 3rem;
+        margin-top: 4rem;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
+    @media (max-width: 37.5em) {
+      .popup__img {
+        width: 90%; }
+        .popup__img:last-child {
+          display: none;
+          visibility: hidden; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -732,6 +819,11 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 75em) {
+      .popup__text {
+        column-count: 1;
+        column-rule: none;
+        margin-bottom: 3rem; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -755,8 +847,7 @@ body {
   margin: 0 auto; }
   @media (max-width: 56.25em) {
     .row {
-      max-width: 50rem;
-      padding: 0 3rem; } }
+      max-width: 50rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
@@ -916,8 +1007,20 @@ body {
   background-image: linear-gradient(110deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../../img/nat-10.jpg);
   background-size: 100%;
   border-radius: 0.3rem;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-  height: 50rem; }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../../img/nat-10.jpg);
+      background-size: cover; } }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../../img/nat-10.jpg); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 75em) {
+      .book__form {
+        width: 65%; } }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
