--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,9 @@
     width: 90%;
     display: block;
     transition: all 1s;
+    @include respond(tab-port) {
+      width: 100%;
+    }
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -46,6 +49,12 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+    @include respond(tab-port) {
+      width: 100%;
+      &:not(:last-child) {
+        margin-bottom: 2rem;
+      }
+    }
   }
 
   &__radio-label {
