--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -21,22 +21,68 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0);
     transition: all 0.4s 0.2s;
+    @include respond(tab-land) {
+      padding: 3rem;
+    }
   }
   &__left {
     width: 33.333333%;
     float: left;
     display: table-cell;
+    vertical-align: middle;
+    box-shadow: 0 2.5rem 4rem rgba($color-black, 0.2);
+
+    @include respond(tab-land) {
+      float: none;
+      width: 100%;
+      display: block;
+      padding-left: 2rem;
+      box-shadow: none;
+    }
   }
+
   &__right {
     width: 66.666667%;
     float: left;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+    @include respond(tab-land) {
+      float: none;
+      width: 100%;
+      display: block;
+      margin: 0 auto;
+      padding: 3rem 2rem;
+    }
+
+    @include respond(tab-port) {
+      & .heading-secondary {
+        font-size: 2rem;
+        margin-top: 2rem;
+      }
+      & .heading-tertiary {
+        font-size: 1.2rem;
+      }
+    }
   }
   &__img {
     display: block;
     width: 100%;
+    margin-top: 1px;
+    @include respond(tab-land) {
+      width: 40%;
+      display: inline-block;
+      margin-right: 3rem;
+      margin-top: 4rem;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
+    }
+    @include respond(phone) {
+      width: 90%;
+      &:last-child {
+        display: none;
+        visibility: hidden;
+      }
+    }
   }
 
   &__text {
@@ -53,6 +99,11 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+    @include respond(tab-land) {
+      column-count: 1;
+      column-rule: none;
+      margin-bottom: 3rem;
+    }
   }
 
   &:target {
