--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,7 +16,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    backface-visibility: hidden;
+    @supports (-webkit-backface-visibility: hidden)
+      or (backface-visibility: hidden) {
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
     border-radius: 0.3rem;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
