feat: working on the built process for production and adding some features

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -53,6 +53,10 @@ body {
     padding: 0;
   }
 }
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
+}
 
 // Media Query NOTES:
 
