--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,8 +16,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    @supports (-webkit-backface-visibility: hidden)
-      or (backface-visibility: hidden) {
+    @supports (-webkit-backface-visibility: hidden) or
+      (backface-visibility: hidden) {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
     }
@@ -174,7 +174,8 @@
     font-weight: 500;
   }
 
-  @include respond(tab-port) {
+  //@include respond(tab-port) {
+  @media only screen and (max-width: 56.25em), only screen and(hover:none) {
     height: auto;
     background-color: $color-white;
     border-radius: 0.3rem;
